--- a/scss/modules/search.scss
+++ b/scss/modules/search.scss
@@ -1,19 +1,44 @@
 .search {
-  width: 100%;
+  display: flex;
   input[type=text] {
-    width: 95.75%;
-    padding: 15px 0 15px 11px;
+    padding: 12px 0 12px 11px;
     font-size: 14px;
     color: $grey9;
     outline: none;
-    margin-top: 22px;
   }
   input[type=submit] {
-    margin: 10px auto 40px;
     outline: none;
     border: 0;
     &:hover {
       box-shadow: inset 2px 2px 2px $orange2;
+    }
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 496px) {
+  .search {
+    flex-flow: column wrap;
+    input[type=text] {
+      width: 95.75%;
+      margin-top: 22px;
+    }
+    input[type=submit] {
+      margin: 10px auto 40px;
+    }
+  }
+}
+
+@media all and (min-width: 497px) and (max-width: 768px) {
+  .search {
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    input[type=text] {
+      width: 60%;
+    }
+    input[type=submit] {
+      width: 35%;
     }
   }
 }
