--- a/css/base.css
+++ b/css/base.css
@@ -6,8 +6,13 @@ h1, h2, h3, h4, h5, h6, p, a, li, ul, span, legend {
   padding: 0;
   font-family: sans-serif;
   font-weight: lighter;
-  text-decoration: none;
+  text-decoration: none; }
+
+li {
   list-style-type: none; }
+
+a {
+  text-decoration: none; }
 
 p {
   font-size: 14px; }
@@ -29,5 +34,9 @@ h5 {
 
 h6 {
   font-size: 14px; }
+
+@media all and (min-width: 497px) and (max-width: 768px) {
+  h1 {
+    font-size: 52px; } }
 
 /*# sourceMappingURL=base.css.map */
