--- a/css/modules/partners.css
+++ b/css/modules/partners.css
@@ -1,24 +1,23 @@
-@media all and (min-width: 320px) and (max-width: 496px) {
-  .hobby1, .hobby2, .hobby3, .hobby4 {
-    position: absolute;
-    right: 58px;
-    top: 88px;
-    width: 16px;
-    height: 16px;
-    padding: 8px;
-    border-radius: 50%;
-    text-align: center; }
+.hobby1, .hobby2, .hobby3, .hobby4 {
+  position: absolute;
+  right: 67px;
+  top: 88px;
+  width: 16px;
+  height: 16px;
+  padding: 8px;
+  border-radius: 50%;
+  text-align: center; }
 
-  .hobby1 {
-    background-color: #ff4e50; }
+.hobby1 {
+  background-color: #ff4e50; }
 
-  .hobby2 {
-    background-color: #ffa710; }
+.hobby2 {
+  background-color: #ffa710; }
 
-  .hobby3 {
-    background-color: #19d4ca; }
+.hobby3 {
+  background-color: #19d4ca; }
 
-  .hobby4 {
-    background-color: #667df3; } }
+.hobby4 {
+  background-color: #667df3; }
 
 /*# sourceMappingURL=partners.css.map */
