--- a/css/section/slider.css
+++ b/css/section/slider.css
@@ -1,35 +1,24 @@
 /*
-Error: Undefined variable: "$grey9".
-        on line 6 of scss/modules/search.scss
+Error: Undefined variable: "$black".
+        on line 6 of scss/section/slider.scss
 
-1: .search {
-2:   display: flex;
-3:   input[type=text] {
-4:     padding: 12px 0 12px 11px;
-5:     font-size: 14px;
-6:     color: $grey9;
-7:     outline: none;
-8:   }
-9:   input[type=submit] {
-10:     outline: none;
-11:     border: 0;
+1: .slider {
+2:   width: 100%;
+3:   height: 700px;
+4:   background: url('../images/slider-img.png') no-repeat center;
+5:   background-size: cover;
+6:   background-color: $black;
+7:   &--top {
+8:     @extend %nav;
+9:   }
+10:   &--description {
+11:     display: flex;
 
 Backtrace:
-scss/modules/search.scss:6
+scss/section/slider.scss:6
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
@@ -78,4 +67,4 @@ scss/modules/search.scss:6
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$grey9\".\A         on line 6 of scss/modules/search.scss\A \A 1: .search {\A 2:   display: flex;\A 3:   input[type=text] {\A 4:     padding: 12px 0 12px 11px;\A 5:     font-size: 14px;\A 6:     color: $grey9;\A 7:     outline: none;\A 8:   }\A 9:   input[type=submit] {\A 10:     outline: none;\A 11:     border: 0;"; }
+  content: "Error: Undefined variable: \"$black\".\A         on line 6 of scss/section/slider.scss\A \A 1: .slider {\A 2:   width: 100%;\A 3:   height: 700px;\A 4:   background: url('../images/slider-img.png') no-repeat center;\A 5:   background-size: cover;\A 6:   background-color: $black;\A 7:   &--top {\A 8:     @extend %nav;\A 9:   }\A 10:   &--description {\A 11:     display: flex;"; }
