--- a/scss/base.scss
+++ b/scss/base.scss
@@ -8,33 +8,19 @@ h1, h2, h3, h4, h5, h6, p, a, li, ul, span, legend {
   font-family: sans-serif;
   font-weight: lighter;
   text-decoration: none;
-  list-style-type: none;
 }
 
-p {
-  font-size: 14px;
-}
+li { list-style-type: none; }
+a { text-decoration: none; }
 
-h1 {
-  font-size: 30px;
-}
+p { font-size: 14px; }
+h1 { font-size: 30px; }
+h2 { font-size: 24px; }
+h3 { font-size: 22px; }
+h4 { font-size: 20px; }
+h5 { font-size: 18px; }
+h6 { font-size: 14px; }
 
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 22px;
-}
-
-h4 {
-  font-size: 20px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 14px;
+@media all and (min-width: 497px) and (max-width: 768px) {
+  h1 { font-size: 52px; }
 }
