--- a/scss/modules/headings.scss
+++ b/scss/modules/headings.scss
@@ -1,4 +1,5 @@
 %heading {
+  width: 100%;
   color: $heading;
   font-size: 22px;
   margin: {
@@ -11,10 +12,22 @@
 
 .heading-closer {
   @extend %heading;
-  margin-bottom: 15px;
+  @media all and (min-width: 320px) and (max-width: 496px) {
+    margin-bottom: 15px;
+  }
+  @media all and (min-width: 497px) and (max-width: 768px) {
+    margin-bottom: 35px;
+    margin-top: 95px;
+  }
 }
 
 .heading-further {
   @extend %heading;
-  margin-bottom: 35px;
+  @media all and (min-width: 320px) and (max-width: 496px) {
+    margin-bottom: 35px;
+  }
+  @media all and (min-width: 497px) and (max-width: 768px) {
+    margin-top: 95px;
+    margin-bottom: 35px;
+  }
 }
