--- a/scss/modules/ideas.scss
+++ b/scss/modules/ideas.scss
@@ -1,24 +1,46 @@
 %idea {
-  @media all and (min-width: 320px) and (max-width: 496px) {
+  position: relative;
+  img {
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+  }
+  h3 {
+    width: 75%;
+    text-align: center;
+    color: $white;
+    line-height: 26px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+
+@media all and (min-width: 320px) and (max-width: 496px) {
+  %idea {
     margin: 0 auto 10px;
-    position: relative;
     width: 100%;
     img {
       width: 100%;
       height: 120px;
       max-height: 200px;
-      object-fit: cover;
-      object-position: top;
+    }
+  }
+}
+
+@media all and (min-width: 497px) and (max-width: 768px) {
+  %idea {
+    margin: 0 auto 10px;
+    width: 30.73%;
+    img {
+      width: 100%;
+      height: 310px;
+      max-height: 400px;
     }
     h3 {
-      width: 75%;
-      text-align: center;
-      color: $white;
-      line-height: 26px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
+      width: 87.3%;
     }
   }
 }
