--- a/scss/modules/nav.scss
+++ b/scss/modules/nav.scss
@@ -1,26 +1,38 @@
+@import '../variables';
+
 %nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: space-between;
+  padding: 46px 40px 0;
+  .userMenu {
+    padding-bottom: 97px;
+    a {
+      color: $white;
+      font-size: 14px;
+      margin-right: 20px;
+    }
+    span {
+      padding: 9px 18px;
+      border: 1px solid $white;
+      border-radius: 40px;
+    }
+  }
+  h4 {
+    color: $white;
+    text-transform: uppercase;
+  }
+
   @media all and (min-width: 320px) and (max-width: 496px) {
-    display: flex;
     flex-direction: column-reverse;
     align-items: center;
     flex-wrap: wrap;
+    padding: 0;
     .userMenu {
       padding-top: 29px;
-      padding-bottom: 97px;
-      a {
-        color: $white;
-        font-size: 14px;
-        margin-right: 20px;
-      }
-      span {
-        padding: 9px 18px;
-        border: 1px solid $white;
-        border-radius: 40px;
-      }
     }
     h4 {
-      color: $white;
-      text-transform: uppercase;
       margin: 0 auto 26.5px;
     }
   }
