--- a/scss/modules/partners.scss
+++ b/scss/modules/partners.scss
@@ -1,20 +1,20 @@
 @import 'hobbies';
 
 %partner {
+  width: 256px;
+  text-align: center;
   @media all and (min-width: 320px) and (max-width: 496px) {
-    width: 236px;
-    margin: 16px auto 0;
-    text-align: center;
-    .avatar {
-      position: relative;
-    }
-    .name {
-      color: $heading;
-      padding: 17px 0 13px;
-    }
-    p {
-      color: $evil-grey;
-      letter-spacing: 0;
-    }
+    margin: 0 auto 35px;
+  }
+  .avatar {
+    position: relative;
+  }
+  .name {
+    color: $heading;
+    padding: 17px 0 13px;
+  }
+  p {
+    color: $evil-grey;
+    letter-spacing: 0;
   }
 }
