--- a/scss/modules/steps.scss
+++ b/scss/modules/steps.scss
@@ -1,45 +1,49 @@
 @import '../variables';
 
 %step {
-  @media all and (min-width: 320px) and (max-width: 496px) {
-    margin-top: 10px;
-    position: relative;
-    .overlay {
-      position: relative;
-      .gradient {
-        position: absolute;
-        z-index: 2;
-        background: linear-gradient($theme, $yellow);
-        width: 100%;
-        height: 99%;
-        opacity: .06;
-      }
-      img {
+  position: relative;
+  .overlay {
+    .gradient {
+      position: absolute;
+      z-index: 2;
+      background: linear-gradient($theme, $yellow);
+      height: 99%;
+      opacity: .06;
+    }
+    img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      @media all and (min-width: 320px) and (max-width: 496px) {
         position: relative;
         width: 100%;
+        height: 99%;
       }
     }
-    .review {
-      position: absolute;
-      bottom: 22px;
-      left: 20px;
-      span {
-        color: $white;
-        font-size: 10px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        padding: 4px 12px 4px 14px;
-        background-color: $theme;
-        border-radius: 40px;
-      }
-      h2 {
-        color: $white;
-        margin: 15px 0 12px;
-      }
-      p {
-        color: $dirty-white;
-        width: 250px;
-      }
+  }
+
+  .review {
+    width: 83%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 22px;
+    span {
+      color: $white;
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      padding: 4px 12px 4px 14px;
+      background-color: $theme;
+      border-radius: 40px;
+    }
+    h2 {
+      color: $white;
+      margin: 15px 0 12px;
+    }
+    p {
+      color: $dirty-white;
+      // padding-right: 30px;
     }
   }
 }
