--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,16 +7,16 @@
 @import 'modules/headings';
 @import 'modules/steps';
 @import 'modules/nav';
-@import 'modules/partners';
+@import 'modules/partner';
 @import 'modules/buttons';
 @import 'modules/ideas';
 @import 'modules/search';
 @import 'modules/linkList';
 
 // sections
-@import 'section/slider';
-@import 'section/instructions';
-@import 'section/partners';
-@import 'section/holidays';
-@import 'section/createActivity';
-@import 'section/footer';
+@import 'sections/slider';
+@import 'sections/instructions';
+@import 'sections/partners';
+@import 'sections/holidays';
+@import 'sections/createActivity';
+@import 'sections/footer';
