--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,9 @@
 .container {
   width: 93.75%;
   margin: 0 auto; }
+  @media all and (min-width: 769px) {
+    .container {
+      width: 70%; } }
 
 .container-fluid {
   margin: 0 auto; }
@@ -10,5 +13,8 @@
   @media all and (min-width: 497px) and (max-width: 768px) {
     .container-fluid {
       width: 100%; } }
+  @media all and (min-width: 769px) {
+    .container-fluid {
+      width: 70%; } }
 
 /*# sourceMappingURL=layout.css.map */
