--- a/css/modules/buttons.css
+++ b/css/modules/buttons.css
@@ -3,7 +3,7 @@ Error: Undefined variable: "$white".
         on line 7 of scss/modules/buttons.scss
 
 2:   display: block;
-3:   width: 100%;
+3:   width: 225px;
 4:   text-align: center;
 5:   border-radius: 40px;
 6:   padding: 11px 0;
@@ -67,4 +67,4 @@ scss/modules/buttons.scss:7
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$white\".\A         on line 7 of scss/modules/buttons.scss\A \A 2:   display: block;\A 3:   width: 100%;\A 4:   text-align: center;\A 5:   border-radius: 40px;\A 6:   padding: 11px 0;\A 7:   color: $white;\A 8:   font-size: 14px;\A 9:   font-family: sans-serif;\A 10: }\A 11: \A 12: .btn-fullfill {"; }
+  content: "Error: Undefined variable: \"$white\".\A         on line 7 of scss/modules/buttons.scss\A \A 2:   display: block;\A 3:   width: 225px;\A 4:   text-align: center;\A 5:   border-radius: 40px;\A 6:   padding: 11px 0;\A 7:   color: $white;\A 8:   font-size: 14px;\A 9:   font-family: sans-serif;\A 10: }\A 11: \A 12: .btn-fullfill {"; }
