--- a/scss/base.scss
+++ b/scss/base.scss
@@ -21,6 +21,6 @@ h4 { font-size: 20px; }
 h5 { font-size: 18px; }
 h6 { font-size: 14px; }
 
-@media all and (min-width: 497px) and (max-width: 768px) {
+@media all and (min-width: 497px) {
   h1 { font-size: 52px; }
 }
