--- a/scss/modules/headings.scss
+++ b/scss/modules/headings.scss
@@ -12,22 +12,19 @@
 
 .heading-closer {
   @extend %heading;
-  @media all and (min-width: 320px) and (max-width: 496px) {
-    margin-bottom: 15px;
-  }
-  @media all and (min-width: 497px) and (max-width: 768px) {
-    margin-bottom: 35px;
-    margin-top: 95px;
-  }
+  margin: 95px 0 35px;
 }
 
 .heading-further {
   @extend %heading;
-  @media all and (min-width: 320px) and (max-width: 496px) {
-    margin-bottom: 35px;
+  margin: 95px 0 35px;
+}
+
+@media all and (min-width: 320px) and (max-width: 496px) {
+  .heading-closer {
+    margin: 35px 0 15px;
   }
-  @media all and (min-width: 497px) and (max-width: 768px) {
-    margin-top: 95px;
-    margin-bottom: 35px;
+  .heading-further {
+    margin: 35px 0;
   }
 }
