--- a/scss/modules/ideas.scss
+++ b/scss/modules/ideas.scss
@@ -1,7 +1,11 @@
 %idea {
   position: relative;
+  width: 30.73%;
+  margin: 0 auto 10px;
   img {
     width: 100%;
+    height: 310px;
+    max-height: 400px;
     object-fit: cover;
     object-position: top;
   }
@@ -30,17 +34,17 @@
   }
 }
 
-@media all and (min-width: 497px) and (max-width: 768px) {
-  %idea {
-    margin: 0 auto 10px;
-    width: 30.73%;
-    img {
-      width: 100%;
-      height: 310px;
-      max-height: 400px;
-    }
-    h3 {
-      width: 87.3%;
-    }
-  }
-}
+// @media all and (min-width: 497px) and (max-width: 768px) {
+//   %idea {
+//     margin: 0 auto 10px;
+//     width: 30.73%;
+//     img {
+//       width: 100%;
+//       height: 310px;
+//       max-height: 400px;
+//     }
+//     h3 {
+//       width: 87.3%;
+//     }
+//   }
+// }
