--- a/scss/modules/partner.scss
+++ b/scss/modules/partner.scss
@@ -6,6 +6,10 @@
   @media all and (min-width: 320px) and (max-width: 496px) {
     margin: 0 auto 35px;
   }
+  @media all and (min-width: 993px) {
+    width: 170px;
+    margin: 0 auto 35px;
+  }
   .avatar {
     position: relative;
   }
