--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,3 +12,6 @@ $evil-grey: #666;
 $dirty-white: #e3e3e3;
 $grey9: #999;
 $grey-c: #ccc;
+
+//fonts
+$sf-display: 'san-francisco display', sans-serif;
