--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,21 @@
+@font-face {
+  font-family: 'san-francisco display';
+  src: url("../fonts/sanfranciscodisplay-ultralight-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 body {
   margin: 0; }
 
-h1, h2, h3, h4, h5, h6, p, a, li, ul, span, legend {
+h1, h2, h3, h4, h5, h6, a, li, ul {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "san-francisco display", sans-serif;
   font-weight: lighter;
   text-decoration: none; }
+
+p, span {
+  font-family: sans-serif;
+  font-weight: lighter; }
 
 li {
   list-style-type: none; }
@@ -80,12 +89,16 @@ h6 {
     margin: 35px 0; } }
 .instruction--steps--step {
   position: relative; }
-  .instruction--steps--step .overlay .gradient {
-    position: absolute;
-    z-index: 2;
+  .instruction--steps--step:after {
+    content: "";
     background: linear-gradient(#ff4e50, #f9d423);
-    height: 99%;
-    opacity: .06; }
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 400px;
+    opacity: .07; }
   .instruction--steps--step .overlay img {
     width: 100%;
     height: 400px;
@@ -100,7 +113,8 @@ h6 {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 22px; }
+    bottom: 22px;
+    z-index: 2; }
     .instruction--steps--step .review span {
       color: #fff;
       font-size: 10px;
@@ -220,10 +234,19 @@ h6 {
 .holidays--idea {
   position: relative;
   width: 30.73%;
-  margin: 0 auto 10px; }
+  margin: 0 auto 20px; }
+  .holidays--idea a:after {
+    content: "";
+    position: absolute;
+    background: #000;
+    opacity: .15;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
   .holidays--idea img {
     width: 100%;
-    height: 310px;
+    height: 100%;
     max-height: 400px;
     object-fit: cover;
     object-position: top; }
@@ -235,12 +258,15 @@ h6 {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%); }
+    transform: translate(-50%, -50%);
+    z-index: 1; }
 
 @media all and (min-width: 320px) and (max-width: 496px) {
   .holidays--idea {
     margin: 0 auto 10px;
     width: 100%; }
+    .holidays--idea a:after {
+      height: 120px; }
     .holidays--idea img {
       width: 100%;
       height: 120px;
@@ -254,7 +280,8 @@ h6 {
     outline: none; }
   .search input[type=submit] {
     outline: none;
-    border: 0; }
+    border: 0;
+    cursor: pointer; }
     .search input[type=submit]:hover {
       box-shadow: inset 2px 2px 2px #ff773c; }
 
