--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'san-francisco display';
+  src: url('../fonts/sanfranciscodisplay-ultralight-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 // general
 @import 'variables';
 @import 'base';
