--- a/scss/modules/steps.scss
+++ b/scss/modules/steps.scss
@@ -2,14 +2,18 @@
 
 %step {
   position: relative;
+  &:after {
+    content: "";
+    background: linear-gradient($theme, $yellow);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 400px;
+    opacity: .07;
+  }
   .overlay {
-    .gradient {
-      position: absolute;
-      z-index: 2;
-      background: linear-gradient($theme, $yellow);
-      height: 99%;
-      opacity: .06;
-    }
     img {
       width: 100%;
       height: 400px;
@@ -28,6 +32,7 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 22px;
+    z-index: 2;
     span {
       color: $white;
       font-size: 10px;
